added cute sliders

--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -65,22 +65,28 @@
                     <li>
                         <p>Increased contrast</p>
                         <div>
-                            <button>On</button>
-                            <button>Off (default)</button>
+                            <label class="switch">
+                                <input type="checkbox">
+                                <span class="slider round"></span>
+                              </label>
                         </div>
                     </li>
                     <li>
                         <p>Gradients</p>
                         <div>
-                            <button>On (default)</button>
-                            <button>Off</button>
+                            <label class="switch">
+                                <input type="checkbox" checked>
+                                <span class="slider round"></span>
+                              </label>
                         </div>
                     </li>
                     <li>
                         <p>Animation</p>
                         <div>
-                            <button>On (default)</button>
-                            <button>Off</button>
+                            <label class="switch">
+                                <input type="checkbox" checked>
+                                <span class="slider round"></span>
+                              </label>
                         </div>
                     </li>
                 </ul>
