--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -46,13 +46,12 @@
                         </div>
                     </li>
                     <li>
-                        <p>Color</p>
+                        <p>Accent color</p>
                         <div>
                             <button>Purple (default)</button>
                             <button class="red">Red</button>
                             <button class="green">Green</button>
                             <button class="blue">Blue</button>
-                            <button>Custom...</button>
                         </div>
                     </li>
                 </ul>
@@ -72,7 +71,7 @@
                         </div>
                     </li>
                     <li>
-                        <p>Gradients</p>
+                        <p>Show gradients</p>
                         <div>
                             <label class="switch">
                                 <input type="checkbox" checked>
@@ -81,7 +80,7 @@
                         </div>
                     </li>
                     <li>
-                        <p>Animation</p>
+                        <p>Show animations</p>
                         <div>
                             <label class="switch">
                                 <input type="checkbox" checked>
@@ -94,6 +93,6 @@
         </div>
     </main>
     <div class="bottomButton">
-        <button class="saveButton">Save</button>
+        <button class="saveButton">Save settings</button>
     </div>
 </body>
