--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -40,7 +40,7 @@
                     <li>
                         <p>Theme</p>
                         <div>
-                            <button>Auto (default)</button>
+                            <button>Auto</button>
                             <button>Light</button>
                             <button>Dark</button>
                         </div>
@@ -48,7 +48,7 @@
                     <li>
                         <p>Accent color</p>
                         <div>
-                            <button>Purple (default)</button>
+                            <button>Purple</button>
                             <button class="red">Red</button>
                             <button class="green">Green</button>
                             <button class="blue">Blue</button>
