improved save button

--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -104,7 +104,9 @@
             </div>
         </div>
     </main>
+</body>
+<footer>
     <div class="bottomButton">
         <button class="saveButton" onclick="saveSettings()">Save settings</button>
     </div>
-</body>
+</footer>
