--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -19,7 +19,7 @@
 <header>
     <div>
         <div id="failSave" class="savedMessage failed">
-            <span class="closebtn" onclick="this.parentElement.style.display='none';">&#x2715;</span>
+            <span class="closebtn" onclick="saveSettings()">&#x2715;</span>
            Failed to save settings.
         </div>
     
