--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -84,7 +84,7 @@
                             <p>Increased contrast</p>
                             <div>
                                 <label class="switch">
-                                    <input type="checkbox" value="highContrastTrue">
+                                    <input type="checkbox" id="contrast" name="high-contrast" value="true">
                                     <span class="slider round"></span>
                                 </label>
                             </div>
@@ -93,7 +93,7 @@
                             <p>Show gradients</p>
                             <div>
                                 <label class="switch">
-                                    <input type="checkbox" value="gradientsTrue" checked>
+                                    <input type="checkbox" id="gradients" name="show-gradients" value="true" checked>
                                     <span class="slider round"></span>
                                 </label>
                             </div>
@@ -102,7 +102,7 @@
                             <p>Show animations</p>
                             <div>
                                 <label class="switch">
-                                    <input type="checkbox" value="animationsTrue" checked>
+                                    <input type="checkbox" id="animations" name="show-animations" value="true" checked>
                                     <span class="slider round"></span>
                                 </label>
                             </div>
