--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -21,12 +21,12 @@
         <div>
             <div id="failSave" class="savedMessage failed">
                 <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
-                Failed to save settings.
+                Failed to save settings.<br>Try again.
             </div>
 
             <div id="sucessfullSave" class="savedMessage sucessfull">
                 <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
-                Settings saved successfully!
+                Settings saved successfully!<br>Refresh to apply.
             </div>
         </div>
     </header>
