accent color changing now works!!!

--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -63,13 +63,13 @@
                         <li>
                             <p>Accent color</p>
                             <div>
-                                <input type="radio" id="purple" name="accent-color" value="purple" checked>
+                                <input type="radio" id="purple" name="accent-color" value="#710a97" checked>
                                 <label for="purple" class="purple button">Purple</label>
-                                <input type="radio" id="red" name="accent-color" value="red">
+                                <input type="radio" id="red" name="accent-color" value="#970a0a">
                                 <label for="red" class="red button">Red</label>
-                                <input type="radio" id="green" name="accent-color" value="green">
+                                <input type="radio" id="green" name="accent-color" value="#0a9721">
                                 <label for="green" class="green button">Green</label>
-                                <input type="radio" id="blue" name="accent-color" value="blue">
+                                <input type="radio" id="blue" name="accent-color" value="#0a4297">
                                 <label for="blue" class="blue button">Blue</label>
                             </div>
                         </li>
