--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="contact, adnan bukvic, actuallyaridan">
     <meta name="author" content="Adnan Bukvic">
     <link href="src/styles/styles.css" rel="stylesheet">
+    <script src="src/scripts/settings.js"></script>
     <script src="src/scripts/dropDownMenu.js"></script>
     <script src="src/scripts/mobileMenu.js"></script>
     <script src="src/scripts/emailModalBox.js"></script>
