--- a/experiences.html
+++ b/experiences.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="experience, adnan bukvic, actuallyaridan">
     <meta name="author" content="Adnan Bukvic">
     <link href="src/styles/styles.css" rel="stylesheet">
+    <script src="src/scripts/settings.js"></script>
     <script src="src/scripts/dropDownMenu.js"></script>
     <script src="src/scripts/mobileMenu.js"></script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="src/favicons/apple-touch-icon.png">
