--- a/settings.html
+++ b/settings.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#710a97">
     <title>Settings</title>
-    <link href="../styles/settings.css" rel="stylesheet">
-    <script src="../scripts/settings.js"></script>
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../favicons/apple-touch-icon.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="../favicons/favicon-32x32.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="../favicons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicons/favicon-16x16.png">
-    <link rel="manifest" href="../favicons/site.webmanifest">
+    <link href="src/styles/styles.css" rel="stylesheet">
+    <script src="src/scripts/settings.js"></script>
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="src/favicons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="src/favicons/favicon-32x32.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="src/favicons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="src/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="src/favicons/favicon-16x16.png">
+    <link rel="manifest" href="src/favicons/site.webmanifest">
 </head>
 
-<body class="gradientBackgroundAnimation">
-    <header>
+<body class="gradientBackgroundAnimation settings">
+    <header class="settings">
         <div>
             <div id="failSave" class="savedMessage failed">
                 <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
@@ -30,10 +30,10 @@
             </div>
         </div>
     </header>
-    <main>
-        <form id="settings" action="../scripts/settings.js">
+    <main class="settings">
+        <form id="settings" action="src/scripts/settings.js">
             <div class="settingGroup">
-                <p>Content you see</p>
+                <p>Content that you see</p>
                 <div class="setting">
                     <ul>
                         <li>
