--- a/experiences.html
+++ b/experiences.html
@@ -25,19 +25,6 @@
 <body class="boxAlignment gradientBackgroundAnimation">
     <header>
         <nav>
-            <div class="langWrapper">
-                <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><img draggable="false"
-                            class="emoji" alt="" src="src/images/emojis/globe.svg"> Language</button>
-                    <div id="langDrop" class="dropdownContent">
-                        <a href="experiences.html"><img draggable="false" class="emoji" alt=""
-                                src="src/images/emojis/usa.svg">/<img draggable="false" class="emoji" alt=""
-                                src="src/images/emojis/uk.svg"> English</a>
-                        <a href="sv/experiences.html"><img draggable="false" class="emoji" alt=""
-                                src="src/images/emojis/sweden.svg"> Svenska (Swedish)</a>
-                    </div>
-                </div>
-            </div>
             <div class="navWrapper">
                 <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/house.svg"> Home</a>
@@ -47,6 +34,8 @@
                         src="src/images/emojis/tools.svg"> Projects</a>
                 <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
+                <a class="navButton" href="settings.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/speak.svg"> Settings</a>
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
@@ -60,6 +49,8 @@
                         src="src/images/emojis/tools.svg"> Projects</a>
                 <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
+                <a class="navButton" href="settings.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/speak.svg"> Settings</a>
             </div>
         </nav>
     </header>
