--- a/settings.html
+++ b/settings.html
@@ -5,9 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#710a97">
-    <title>Settings</title>
+    <title>Settings — actuallyaridan</title>
+    <link href="src/styles/styles.css" rel="stylesheet">
     <link href="src/styles/styles.css" rel="stylesheet">
     <script src="src/scripts/settings.js"></script>
+    <script src="src/scripts/dropDownMenu.js"></script>
+    <script src="src/scripts/mobileMenu.js"></script>
+    <script src="src/scripts/emailModalBox.js"></script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="src/favicons/favicon-32x32.png">
     <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="src/favicons/favicon-16x16.png">
