--- a/settings.html
+++ b/settings.html
@@ -106,8 +106,8 @@
                                 <label for="green" class="green button">Green</label>
                                 <input type="radio" id="blue" name="accent-color" value="#0a4297">
                                 <label for="blue" class="blue button">Blue</label>
-                                <input type="radio" id="yellow" name="accent-color" value="#d7d716">
-                                <label for="yellow" class="yellow button">Yellow</label>
+                                <input type="radio" id="orange" name="accent-color" value="#974e0a">
+                                <label for="orange" class="orange button">Orange</label>
                             </div>
                         </li>
                     </ul>
