Made the settings menu responsively deigned

--- a/settings.html
+++ b/settings.html
@@ -53,6 +53,7 @@
         </nav>
     </header>
     <main class="settings">
+        <h1>Settings</h1>
         <div class="messages">
             <div>
                 <div id="failSave" class="savedMessage failed">
