--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton" href="settings.html"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/speak.svg"> Settings</a>
+                        src="src/images/emojis/setttings.svg"> Settings</a>
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
@@ -59,7 +59,7 @@
                 <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton" href="settings.html"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/speak.svg"> Settings</a>
+                        src="src/images/emojis/setttings.svg"> Settings</a>
             </div>
         </nav>
     </header>
