--- a/settings.html
+++ b/settings.html
@@ -33,7 +33,7 @@
                 <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton activeChoice" href="settings.html"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/speak.svg"> Settings</a>
+                        src="src/images/emojis/setttings.svg"> Settings</a>
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
@@ -48,7 +48,7 @@
                 <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton activeChoice" href="settings.html"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/speak.svg"> Settings</a>
+                        src="src/images/emojis/setttings.svg"> Settings</a>
             </div>
         </nav>
     </header>
