--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <h1>Home</h1>
                     <div class="centerer">
                         <div class="centererItems">
-                            <p>Hi there! welcome to my website! I use this website mainly to show requirers my skills
+                            <p>Hi there! Welcome to my website! I use this website mainly to show requirers my skills
                                 and contact information.<br>I hope you'll enjoy your stay here. I'd give you some
                                 cookies but I respect your privacy, so maybe another time?</p>
                         </div>
