Added language button

--- a/settings.html
+++ b/settings.html
@@ -75,7 +75,10 @@
                         <li>
                             <p>Language</p>
                             <div>
-                                <button>This feature is currently broken</button>
+                                <select class="button" id="language">
+                                    <option value="en" selected>English</option>
+                                    <option value="sv">Svenska (Swedish)</option>
+                                  </select>
                             </div>
                         </li>
                     </ul>
@@ -99,15 +102,15 @@
                         <li>
                             <p>Accent color</p>
                             <div>
-                                <input type="radio" id="purple" name="accent-color" value="#710a97" checked>
+                                <input type="radio" id="purple" name="accent-color" value="113, 10, 151" checked>
                                 <label for="purple" class="purple button">Purple</label>
-                                <input type="radio" id="red" name="accent-color" value="#970a0a">
+                                <input type="radio" id="red" name="accent-color" value="151, 10, 10">
                                 <label for="red" class="red button">Red</label>
-                                <input type="radio" id="green" name="accent-color" value="#0a9721">
+                                <input type="radio" id="green" name="accent-color" value="10, 151, 33">
                                 <label for="green" class="green button">Green</label>
-                                <input type="radio" id="blue" name="accent-color" value="#0a4297">
+                                <input type="radio" id="blue" name="accent-color" value="10, 66, 151">
                                 <label for="blue" class="blue button">Blue</label>
-                                <input type="radio" id="orange" name="accent-color" value="#974e0a">
+                                <input type="radio" id="orange" name="accent-color" value="151, 78, 10">
                                 <label for="orange" class="orange button">Orange</label>
                             </div>
                         </li>
