--- a/sv/settings.html
+++ b/sv/settings.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#710a97">
-    <title>Settings — actuallyaridan</title>
-    <link href="src/styles/styles.css" rel="stylesheet">
-    <link href="src/styles/styles.css" rel="stylesheet">
-    <script src="src/scripts/settings.js"></script>
-    <script src="src/scripts/dropDownMenu.js"></script>
-    <script src="src/scripts/mobileMenu.js"></script>
-    <script src="src/scripts/emailModalBox.js"></script>
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="src/favicons/apple-touch-icon.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="src/favicons/favicon-32x32.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="src/favicons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="src/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="src/favicons/favicon-16x16.png">
-    <link rel="manifest" href="src/favicons/site.webmanifest">
+    <title>Inställningar — actuallyaridan</title>
+    <link href="../src/styles/styles.css" rel="stylesheet">
+    <link href="../src/styles/styles.css" rel="stylesheet">
+    <script src="../src/scripts/settings.js"></script>
+    <script src="../src/scripts/dropDownMenu.js"></script>
+    <script src="../src/scripts/mobileMenu.js"></script>
+    <script src="../src/scripts/emailModalBox.js"></script>
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../src/favicons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="../src/favicons/favicon-32x32.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="../src/favicons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../src/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../src/favicons/favicon-16x16.png">
+    <link rel="manifest" href="../src/favicons/site.webmanifest">
 </head>
 
 <body class="gradientBackgroundAnimation settings">
@@ -25,59 +25,59 @@
         <nav>
             <div class="navWrapper">
                 <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/house.svg"> Home</a>
+                        src="../src/images/emojis/house.svg"> Hem</a>
                 <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/tools.svg"> Projects</a>
+                        src="../src/images/emojis/brain.svg"> Erfarenhet</a>
+                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/tools.svg"> Projekt</a>
                 <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/speak.svg"> Contact</a>
+                        src="../src/images/emojis/speak.svg"> Kontakt</a>
                 <a class="navButton activeChoice" href="settings.html"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/setttings.svg"> Settings</a>
+                        src="../src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
                 <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/house.svg"> Home</a>
+                        src="../src/images/emojis/house.svg"> Hem</a>
                 <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/tools.svg"> Projects</a>
+                        src="../src/images/emojis/brain.svg"> Erfarenhet</a>
+                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/tools.svg"> Projekt</a>
                 <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/speak.svg"> Contact</a>
+                        src="../src/images/emojis/speak.svg"> Kontakt</a>
                 <a class="navButton activeChoice" href="settings.html"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/setttings.svg"> Settings</a>
+                        src="../src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
         </nav>
     </header>
     <main class="settings">
-        <h1>Settings</h1>
+        <h1>Inställningar</h1>
         <div class="messages">
             <div>
                 <div id="failSave" class="savedMessage failed">
                     <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
-                    Failed to save settings.<br>Try again.
+                    Dina inställningar kunde inte sparas.<br>Försök igen.
                 </div>
     
                 <div id="sucessfullSave" class="savedMessage sucessfull">
                     <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
-                    Settings saved successfully!<br>Refresh to apply.
+                    Dina inställningar sparades!<br>Ladda om för att verkställa.
                 </div>
             </div>
         </div>
-        <form id="settings" action="src/scripts/settings.js">
+        <form id="settings" action="../src/scripts/settings.js">
             <div class="settingGroup">
-                <p>Content that you see</p>
+                <p>Innehåll du ser</p>
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>Language</p>
+                            <p>Språk</p>
                             <div>
                                 <select class="button" id="language-select">
-                                    <option value="en" selected>English (Engelska)</option>
-                                    <option value="sv">Svenska (Swedish)</option>
+                                    <option value="sv" selected>Svenska (Swedish)</option>
+                                    <option value="en">English (English)</option>
                                   </select>
                             </div>
                         </li>
@@ -85,31 +85,31 @@
                 </div>
             </div>
             <div class="settingGroup">
-                <p>Appearance</p>
+                <p>Utseende</p>
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>Theme</p>
+                            <p>Tema</p>
                             <div>
                                 <input type="radio" id="auto" name="theme-color" value="auto">
-                                <label for="auto" class="auto button">Auto</label>
+                                <label for="auto" class="auto button">Automatiskt</label>
                                 <input type="radio" id="light" name="theme-color" value="light">
-                                <label for="light" class="light button">Light</label>
+                                <label for="light" class="light button">Ljust</label>
                                 <input type="radio" id="dark" name="theme-color" value="dark" checked>
-                                <label for="dark" class="dark button">Dark</label>
+                                <label for="dark" class="dark button">Mörkt</label>
                             </div>
                         </li>
                         <li>
-                            <p>Accent color</p>
+                            <p>Färg</p>
                             <div>
                                 <input type="radio" id="purple" name="accent-color" value="113, 10, 151" checked>
-                                <label for="purple" class="purple button">Purple</label>
+                                <label for="purple" class="purple button">Lila</label>
                                 <input type="radio" id="red" name="accent-color" value="151, 10, 10">
-                                <label for="red" class="red button">Red</label>
+                                <label for="red" class="red button">Röd</label>
                                 <input type="radio" id="green" name="accent-color" value="10, 151, 33">
-                                <label for="green" class="green button">Green</label>
+                                <label for="green" class="green button">Grön</label>
                                 <input type="radio" id="blue" name="accent-color" value="10, 66, 151">
-                                <label for="blue" class="blue button">Blue</label>
+                                <label for="blue" class="blue button">Blå</label>
                                 <input type="radio" id="orange" name="accent-color" value="151, 78, 10">
                                 <label for="orange" class="orange button">Orange</label>
                             </div>
@@ -118,11 +118,11 @@
                 </div>
             </div>
             <div class="settingGroup">
-                <p>Accessibility</p>
+                <p>Tillgänglighet</p>
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>Increased contrast</p>
+                            <p>Öka kontrast</p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="contrast" name="high-contrast" value="true">
@@ -131,7 +131,7 @@
                             </div>
                         </li>
                         <li>
-                            <p>Show gradients</p>
+                            <p>Visa färggradienter</p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="gradients" name="show-gradients" value="true" checked>
@@ -140,7 +140,7 @@
                             </div>
                         </li>
                         <li>
-                            <p>Show animations</p>
+                            <p>Visa animationer</p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="animations" name="show-animations" value="true" checked>
@@ -152,14 +152,14 @@
                 </div>
             </div>
             <div class="bottomButton">
-                <button class="saveButton" type="submit">Save settings</button>
+                <button class="saveButton" type="submit">Spara inställningar</button>
             </div>
         </form>
     </main>
     <footer>
         <div class="footer">
-            <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
-            <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
+            <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
+            <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
         </div>
     </footer>
 </body>
