Fixed some dumb issues

--- a/settings.html
+++ b/settings.html
@@ -76,8 +76,8 @@
                             <p>Language</p>
                             <div>
                                 <select class="button" id="language-select">
-                                    <option value="en" selected>English (Engelska)</option>
-                                    <option value="sv">Svenska (Swedish)</option>
+                                    <option value="en" selected>English</option>
+                                    <option value="sv">Svenska</option>
                                   </select>
                             </div>
                         </li>
