--- a/sv/settings.html
+++ b/sv/settings.html
@@ -36,7 +36,7 @@
                         src="../src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
+                <button onclick="toggleMenu()" class="navButton">＝ Meny</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
                 <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
@@ -76,8 +76,8 @@
                             <p>Språk</p>
                             <div>
                                 <select class="button" id="language-select">
-                                    <option value="sv" selected>Svenska (Swedish)</option>
-                                    <option value="en">English (English)</option>
+                                    <option value="sv" selected>Svenska</option>
+                                    <option value="en">English</option>
                                   </select>
                             </div>
                         </li>
