--- a/sv/settings.html
+++ b/sv/settings.html
@@ -28,7 +28,7 @@
                         src="../src/images/emojis/house.svg"> Hem</a>
                 <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/tools.svg"> Projekt</a>
                 <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/speak.svg"> Kontakt</a>
@@ -43,7 +43,7 @@
                         src="../src/images/emojis/house.svg"> Hem</a>
                 <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/tools.svg"> Projekt</a>
                 <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/speak.svg"> Kontakt</a>
