--- a/settings.html
+++ b/settings.html
@@ -73,7 +73,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>Language</p>
+                            <p><label for="language-select">Language</label></p>
                             <div>
                                 <select class="button" id="language-select">
                                     <option value="en" selected>English</option>
@@ -131,7 +131,7 @@
                             </div>
                         </li>
                         <li>
-                            <p>Show gradients</p>
+                            <p><label for="gradients">Show gradients</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="gradients" name="show-gradients" value="true" checked>
@@ -140,7 +140,7 @@
                             </div>
                         </li>
                         <li>
-                            <p>Show animations</p>
+                            <p><label for="aniations">Show animations</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="animations" name="show-animations" value="true" checked>
