--- a/settings.html
+++ b/settings.html
@@ -122,7 +122,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>Increased contrast</p>
+                            <p><label for="gradients">Increase contrast</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="contrast" name="high-contrast" value="true">
@@ -140,7 +140,7 @@
                             </div>
                         </li>
                         <li>
-                            <p><label for="aniations">Show animations</label></p>
+                            <p><label for="animations">Show animations</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="animations" name="show-animations" value="true" checked>
