--- a/settings.html
+++ b/settings.html
@@ -122,7 +122,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p><label for="gradients">Increase contrast</label></p>
+                            <p><label for="contrast">Increase contrast</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="contrast" name="high-contrast" value="true">
