--- a/sv/settings.html
+++ b/sv/settings.html
@@ -54,19 +54,6 @@
     </header>
     <main class="settings">
         <h1>Inställningar</h1>
-        <div class="messages">
-            <div>
-                <div id="failSave" class="savedMessage failed">
-                    <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
-                    Dina inställningar kunde inte sparas.<br>Försök igen.
-                </div>
-    
-                <div id="sucessfullSave" class="savedMessage sucessfull">
-                    <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
-                    Dina inställningar sparades!<br>Ladda om för att verkställa.
-                </div>
-            </div>
-        </div>
         <form id="settings" action="../src/scripts/settings.js">
             <div class="settingGroup">
                 <p>Innehåll du ser</p>
@@ -151,8 +138,23 @@
                     </ul>
                 </div>
             </div>
-            <div class="bottomButton">
-                <button class="saveButton" type="submit">Spara inställningar</button>
+            <div class="saveSettings">
+                <div class="messages">
+                    <div>
+                        <div id="failSave" class="savedMessage failed">
+                            <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
+                            Dina inställningar kunde inte sparas.<br>Försök igen.
+                        </div>
+            
+                        <div id="sucessfullSave" class="savedMessage sucessfull">
+                            <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
+                            Dina inställningar sparades!<br>Ladda om för att verkställa.
+                        </div>
+                    </div>
+                </div>
+                <div class="bottomButton">
+                    <button class="saveButton" type="submit">Spara inställningar</button>
+                </div>
             </div>
         </form>
     </main>
